--- a/assets/report_page.css
+++ b/assets/report_page.css
@@ -242,8 +242,18 @@
     transform: scale(-1,1);
     filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5));
 }
+
+/* Report Saved Container */
+.report_saved_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+}
 .report_saved_card {
+    width: 100%;
     padding: 10px;
+    margin: 10px 0px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;
 }
@@ -261,13 +271,30 @@
     margin: 0px;
     padding: 0px;
 }
-.report_saved_child {
+.report_saved_header_text {
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: center;
 }
-.report_saved_child p {
+.report_saved_header_text p {
+    color: #052F5F;
+    font-size: 12px;
+    font-family: "Poppins";
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+}
+.report_saved_header_text svg {
+    margin: 0px 5px;
+}
+.report_saved_filter {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+}
+.report_saved_filter p {
     color: #052F5F;
     font-size: 14px;
     font-family: "Poppins";
@@ -275,6 +302,6 @@
     margin: 0px;
     padding: 0px;
 }
-.report_saved_child svg {
+.report_saved_filter svg {
     margin: 0px 5px 0px 0px;
 }
