--- a/assets/report_page.css
+++ b/assets/report_page.css
@@ -144,7 +144,7 @@
     display: flex;
     flex-direction: row;
     justify-content: start;
-    align-items: center;
+    align-items: start;
     width: 100%;
 }
 .report_filter_option {
@@ -247,14 +247,17 @@
 .report_saved_container {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     height: 100%;
 }
-.report_saved_card {
+.report_saved_card_list {
     width: 100%;
+}
+.report_saved_card {
     padding: 10px;
-    margin: 10px 0px;
-    border-radius: 10px;
+    margin: 10px 0px 0px 0px;
+    border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;
 }
 .report_saved_header {
