--- a/assets/dashboard_page.css
+++ b/assets/dashboard_page.css
@@ -191,6 +191,10 @@ body {
     justify-content: center;
     height: 100%;
 }
+.kpi_platform_card {
+    display: flex;
+    flex-direction: column;
+}
 .kpi_platform_count_label {
     color: black;
     font-size: 18px;
@@ -198,10 +202,11 @@ body {
     font-weight: 600;
 }
 .kpi_platform_card_row2 {
+    flex: 1;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .kpi_platform_classification_container {
     padding: 0px 25px 0px 25px;
