--- a/assets/report_page.css
+++ b/assets/report_page.css
@@ -1,7 +1,6 @@
 /* Report Page Container */
 .report_page_container {
     background-color: transparent;
-    height: calc(100vh - 8.5vh - 20px);
     margin: 10px;
     padding: 0px;
     border-radius: 5px;
@@ -304,6 +303,7 @@
     font-weight: 500;
     margin: 0px;
     padding: 0px;
+    white-space: pre-line;
 }
 .report_saved_filter svg {
     margin: 0px 5px 0px 0px;
