--- a/assets/report_page.css
+++ b/assets/report_page.css
@@ -9,6 +9,7 @@
     justify-content: space-between;
     align-items: start;
     box-shadow: none;
+    height: calc(100vh - 8.5vh - 20px);
 }
 
 /* Report Main Container */
@@ -22,20 +23,13 @@
     padding: 15px;
     border-radius: 5px;
 }
-.report_main_container_subheader {
-    color: #052F5F;
-    font-size: 12px;
-    font-family: "Poppins";
-    font-weight: 600;
-    padding: 5px 0px;
-}
 .report_main_container_header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid grey;
-    padding: 0px 0px 15px 0px;
+    padding: 0px 0px 10px 0px;
 }
 .report_main_logo_container {
     display: flex;
@@ -68,6 +62,55 @@
 .report_main_container_tab_option:hover {
     background-color: #e6e6e6;
 }
+.report_subheader_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0px;
+}
+.report_subheader {
+    color: #052F5F;
+    font-size: 12px;
+    font-family: "Poppins";
+    font-weight: 600;
+    margin: 0px;
+}
+.report_subheader_dropdown_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.report_subheader_dropdown_container p {
+    color: #052F5F;
+    font-size: 14px;
+    font-family: "Poppins";
+    font-weight: 600;
+    margin: 0px 10px;
+}
+.report_subheader_dropdown .mantine-Select-input {
+    font-size: 14px;
+    font-family: "Poppins";
+    font-weight: 600;
+    text-align: center;
+    width: 70px;
+}
+.report_subheader_dropdown .mantine-Select-item {
+    font-size: 14px;
+    font-family: "Poppins";
+    font-weight: 500;
+}
+.report_subheader_dropdown .mantine-Select-rightSection {
+    background-color: transparent;
+    pointer-events: none;
+    transition: transform 0.3s ease-in-out;
+}
+.report_subheader_dropdown .mantine-Select-input:focus + .mantine-Select-rightSection {
+    transform: rotate(180deg);
+}
+
+/* Report Page Content */
 .report_page_content {
     flex: 1;
     display: flex;
@@ -236,7 +279,7 @@
 .report_image {
     height: 70%;
     position: absolute;
-    bottom: 12%;
+    bottom: 14%;
     right: 5%;
     transform: scale(-1,1);
     filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5));
@@ -244,18 +287,18 @@
 
 /* Report Saved Container */
 .report_saved_container {
+    flex: 1 1 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    height: 100%;
 }
 .report_saved_card_list {
     width: 100%;
 }
 .report_saved_card {
-    padding: 10px;
-    margin: 10px 0px 0px 0px;
+    padding: 10px 5px;
+    margin: 0px 0px 15px 0px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;
 }
