report page modal popup

--- a/assets/report_page.css
+++ b/assets/report_page.css
@@ -297,9 +297,12 @@
     width: 100%;
 }
 .report_saved_card {
+    width: 100%;
     position: relative;
     padding: 10px 5px;
     margin: 0px 0px 15px 0px;
+    background-color: white;
+    border: transparent;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;
 }
