--- a/assets/dashboard_page.css
+++ b/assets/dashboard_page.css
@@ -1,12 +1,6 @@
 /* Add Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
-/* Attributes for whole page */
-body {
-    font-family: "Poppins";
-    background-color: #B9D9EB;
-}
-
 /* No data after Filter Message */
 .no_data_container {
     display: flex;
@@ -119,18 +113,22 @@ body {
 
 /* KPI Container */
 .kpi_container {
+    width: 100%;
     display: flex;
-    flexDirection: row;
-    margin: 10px;
+    flex-direction: row;
+    gap: 10px;
+    margin: 0px;
     padding: 0px;
 }
 
 /* kpi_alert_count */
 .kpi_alert_count_container {
     width: auto;
-    margin: 0px 10px 0px 0px;
     display: flex;
     flex-direction: column;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
     transition: transform 0.2s ease-in-out;
 }
 .kpi_alert_count_container:hover {
@@ -174,26 +172,58 @@ body {
     text-align: center;
 }
 
+/* KPI Buttons */
+.kpi_platform_backward{
+    position: absolute;
+    left: -10px;
+    z-index: 2;
+    border-radius: 100%;
+    background-color: white;
+    box-shadow: 0px 0px 1px black;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+.kpi_platform_count_container:hover .kpi_platform_backward {
+    opacity: 1;
+}
+.kpi_platform_forward{
+    position: absolute;
+    right: -10px;
+    z-index: 2;
+    border-radius: 100%;
+    background-color: white;
+    box-shadow: 0px 0px 1px black;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+.kpi_platform_count_container:hover .kpi_platform_forward {
+    opacity: 1;
+}
+
 /* kpi_platform_count */
 .kpi_platform_count_container {
     flex: 1;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     position: relative;
 }
 .kpi_platform_count {
     flex: 1;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    gap: 10px;
     justify-content: center;
+    align-items: center;
     height: 100%;
 }
 .kpi_platform_card {
     display: flex;
     flex-direction: column;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
 }
 .kpi_platform_count_label {
     color: black;
@@ -206,7 +236,6 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
 }
 .kpi_platform_classification_container {
     padding: 0px 25px 0px 25px;
@@ -229,32 +258,6 @@ body {
     font-size: 40px;
     font-family: "Poppins";
     font-weight: 600;
-}
-.kpi_platform_backward{
-    position: absolute;
-    left: -12.5px;
-    z-index: 2;
-    border-radius: 100%;
-    background-color: white;
-    box-shadow: 0px 0px 1px black;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
-.kpi_platform_count_container:hover .kpi_platform_backward {
-    opacity: 1;
-}
-.kpi_platform_forward{
-    position: absolute;
-    right: -12.5px;
-    z-index: 2;
-    border-radius: 100%;
-    background-color: white;
-    box-shadow: 0px 0px 1px black;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
-.kpi_platform_count_container:hover .kpi_platform_forward {
-    opacity: 1;
 }
 .kpi_platform_count {
     flex: 1;
@@ -284,12 +287,8 @@ body {
 }
 .kpi_platform_card {
     flex: 1;
-    margin-right: 10px;
     height: 100%;
     transition: transform 0.2s ease-in-out;
-}
-.kpi_platform_card:last-child {
-    margin-right: 0px;
 }
 .kpi_platform_card:hover {
     transform: translateY(-5px);
@@ -298,15 +297,73 @@ body {
     transform: translateY(-5px);
 }
 .kpi_platform_comparison {
-    font-size:12px;
+    font-size: 12px;
     font-family: "Poppins";
-    font-weight:600;
+    font-weight: 600;
     padding: 0px 5px;
     border: 2px solid;
     border-radius: 5px;
 }
 
-/* progress bar */
+/* Chart Container */
+.dashboard_charts {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 0px;
+    padding: 0px;
+}
+
+/* Row 1 */
+.row1{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin: 0px;
+    padding: 0px;
+}
+
+/* Content Categories*/
+.content_risk_classification_container {
+    width: 65%;
+    display: flex;
+    flex-direction: row;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: transform 0.2s ease-in-out;
+}
+.content_risk_classification_container:hover {
+    transform: translateY(-5px);
+}
+
+/* Radial Chart */
+.content_classification_radial_chart {
+    font-family: "Poppins";
+    background-color: white;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.content_classification_image {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Progress Bar */
+.risk_categories_horizontal_bar {
+    font-family: "Poppins";
+    background-color: white;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .risk_categories_progress_bar {
     width: 95%;
 }
@@ -359,6 +416,51 @@ body {
     border: 2px solid #228be6;
 }
 
+/* Save As Image */
+.save_as_image {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: none;
+}
+.content_risk_classification_container:hover .save_as_image {
+    display: block;
+}
+
+/* Risk Bar Chart */
+.content_risk_bar_chart {
+    width: 35%;
+    font-family: "Poppins";
+    background-color: white;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: transform 0.2s ease-in-out;
+}
+.content_risk_bar_chart:hover {
+    transform: translateY(-5px);
+}
+
+/* Row 2 */
+.row2{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin: 0px;
+    padding: 0px;
+}
+
+/* Comment Alert Line Chart */
+.comment_alert_line_chart_container {
+    width: 65%;
+    border-radius: 5px;
+    background-color: white;
+    overflow: hidden;
+    transition: transform 0.2s ease-in-out;
+}
+.comment_alert_line_chart_container:hover {
+    transform: translateY(-5px);
+}
+
 /* date slider filter */
 .comment_alert_line_chart_slider_container {
     height: 50px;
@@ -401,95 +503,9 @@ body {
     height: 10px;
 }
 
-/* Row 1 */
-.row1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-/* Content Categories*/
-.content_risk_classification_container {
-    display: flex;
-    flex-direction: row;
-    border-radius: 5px;
-    overflow: hidden;
-    transition: transform 0.2s ease-in-out;
-}
-.content_risk_classification_container:hover {
-    transform: translateY(-5px);
-}
-
-/* Radial Chart */
-.content_classification_radial_chart {
-    font-family: "Poppins";
-    background-color: white;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-.content_classification_image {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Progress Bar */
-.risk_categories_horizontal_bar {
-    font-family: "Poppins";
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Save As Image */
-.save_as_image {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    display: none;
-}
-.content_risk_classification_container:hover .save_as_image {
-    display: block;
-}
-
-/* Risk Bar Chart */
-.content_risk_bar_chart {
-    font-family: "Poppins";
-    background-color: white;
-    border-radius: 5px;
-    overflow: hidden;
-    transition: transform 0.2s ease-in-out;
-}
-.content_risk_bar_chart:hover {
-    transform: translateY(-5px);
-}
-
-/* Row 2 */
-.row2{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-/* Comment Alert Line Chart */
-.comment_alert_line_chart_container {
-    border-radius: 5px;
-    background-color: white;
-    overflow: hidden;
-    transition: transform 0.2s ease-in-out;
-}
-.comment_alert_line_chart_container:hover {
-    transform: translateY(-5px);
-}
-
 /* Comment Classification Pie Chart */
 .comment_classification_pie_chart {
+    width: 35%;
     border-radius: 5px;
     overflow: hidden;
     transition: transform 0.2s ease-in-out;
