final report page changes

--- a/assets/report_page.css
+++ b/assets/report_page.css
@@ -286,6 +286,103 @@
     filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5));
 }
 
+/* Preview Overview  */
+.report_preview_overview .mantine-Modal-title {
+    color: #052F5F;
+    font-size: 24px;
+    font-family: "Poppins";
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+}
+.report_preview_overview .mantine-Modal-body {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.report_preview_overview_header_container {
+    width: 99%;
+    background-color: #052F5F;
+    border-radius: 5px;
+}
+.report_preview_overview_header {
+    width: 85%;
+    padding: 10px;
+    margin: auto;
+    background-color: #052F5F;
+}
+.report_preview_overview_filter {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: start;
+    align-items: center;
+}
+.report_preview_overview_filter p {
+    color: white;
+    font-size: 14px;
+    font-family: "Poppins";
+    font-weight: 500;
+    margin: 0px;
+    padding: 0px;
+}
+.report_preview_overview_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.report_preview_overview_children {
+    width: 99%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+    background-color: white;
+    border: transparent;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;
+}
+.report_preview_overview_children_platform {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: start;
+    align-items: center;
+}
+.report_preview_overview_children_platform img {
+    width: 2vw;
+    aspect-ratio: 1 / 1;
+}
+.report_preview_overview_children_platform p {
+    color: #052F5F;
+    font-size: 18px;
+    font-family: "Poppins";
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+}
+.report_preview_overview_children_text {
+    color: black;
+    font-size: 16px;
+    font-family: "Poppins";
+    font-weight: 500;
+    margin: 0px;
+    padding: 0px;
+}
+.report_preview_overview_children_date {
+    color: black;
+    font-size: 12px;
+    font-family: "Poppins";
+    font-weight: 500;
+    margin: 0px;
+    padding: 0px;
+}
+
 /* Report Saved Container */
 .report_saved_container {
     flex: 1 1 100%;
@@ -359,8 +456,8 @@
     padding: 0px;
 }
 
-/* Report Overview */
-.report_overview .mantine-Modal-title {
+/* Report Saved Overview */
+.report_saved_overview .mantine-Modal-title {
     color: #052F5F;
     font-size: 24px;
     font-family: "Poppins";
@@ -368,44 +465,45 @@
     margin: 0px;
     padding: 0px;
 }
-.report_overview .mantine-Modal-body {
+.report_saved_overview .mantine-Modal-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     justify-content: center;
     align-items: center;
 }
-.report_overview_header_container {
+.report_saved_overview_header_container {
     width: 99%;
     display: flex;
     flex-direction: row;
     gap: 10px;
-    justify-content: center;
-    align-items: center;
+    align-items: stretch;
 }
-.report_overview_header {
+.report_saved_overview_header {
     width: 85%;
     padding: 10px;
+    background-color: #052F5F;
+    border-radius: 5px;
 }
-.report_overview_button {
-    height: 60px;
+.report_saved_overview_button {
+    color: #052F5F;
     width: 15%;
-    font-size: 16px;
+    font-size: 18px;
     font-family: "Poppins";
-    font-weight: 500;
+    font-weight: 600;
     border: transparent;
     border-radius: 5px;
     background-color: rgb(64, 192, 87);
 }
-.report_overview_filter {
+.report_saved_overview_filter {
     display: flex;
     flex-direction: row;
     gap: 10px;
     justify-content: start;
     align-items: center;
 }
-.report_overview_filter p {
-    color: #052F5F;
+.report_saved_overview_filter p {
+    color: white;
     font-size: 14px;
     font-family: "Poppins";
     font-weight: 500;
@@ -414,7 +512,7 @@
 }
 
 /* Report Overview Children */
-.report_overview_children {
+.report_saved_overview_container {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -422,7 +520,7 @@
     justify-content: center;
     align-items: center;
 }
-.report_page_children {
+.report_saved_overview_children {
     width: 99%;
     display: flex;
     flex-direction: column;
@@ -433,18 +531,18 @@
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;
 }
-.report_page_children_platform {
+.report_saved_overview_children_platform {
     display: flex;
     flex-direction: row;
     gap: 10px;
     justify-content: start;
     align-items: center;
 }
-.report_page_children_platform img {
+.report_saved_overview_children_platform img {
     width: 2vw;
     aspect-ratio: 1 / 1;
 }
-.report_page_children_platform p {
+.report_saved_overview_children_platform p {
     color: #052F5F;
     font-size: 18px;
     font-family: "Poppins";
@@ -452,7 +550,7 @@
     margin: 0px;
     padding: 0px;
 }
-.report_page_children_text {
+.report_saved_overview_children_text {
     color: black;
     font-size: 16px;
     font-family: "Poppins";
@@ -460,7 +558,7 @@
     margin: 0px;
     padding: 0px;
 }
-.report_page_children_date {
+.report_saved_overview_children_date {
     color: black;
     font-size: 12px;
     font-family: "Poppins";
