--- a/assets/dashboard_page.css
+++ b/assets/dashboard_page.css
@@ -268,6 +268,7 @@
     width: 3.5vw;
     aspect-ratio: 1 / 1;
     text-align: center;
+    border-radius: 15px;
 }
 .kpi_platform_card_no_data {
     height: 100%;
