--- a/assets/dashboard_page.css
+++ b/assets/dashboard_page.css
@@ -38,6 +38,7 @@
 .overview_info_container {
     display: flex;
     flex-direction: row;
+    gap: 20px;
     justify-content: left;
     align-items: center;
     font-family: "Poppins";
@@ -53,11 +54,19 @@
 .overview_info {
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
 }
 .overview_info_option {
     display: flex;
     flex-direction: row;
+    gap: 10px;
+    overflow: hidden;
+}
+.overview_info_option strong {
+    white-space: nowrap;
+}
+.overview_info_option p {
+    margin: 0px;
+    padding: 0px;
 }
 .overview_title {
     position: relative;
@@ -106,9 +115,6 @@
     font-size: 14px;
     font-family: "Poppins";
     font-weight: 600;
-}
-.overview_classification {
-    background-color: red;
 }
 
 /* KPI Container */
