--- a/assets/report_page.css
+++ b/assets/report_page.css
@@ -66,52 +66,12 @@
 .report_main_container_tab_option:hover {
     background-color: #B9D9EB;
 }
-.report_subheader_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0px;
-}
 .report_subheader {
     color: #052F5F;
     font-size: 12px;
     font-family: "Poppins";
     font-weight: 600;
     margin: 0px;
-}
-.report_subheader_dropdown_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.report_subheader_dropdown_container p {
-    color: #052F5F;
-    font-size: 14px;
-    font-family: "Poppins";
-    font-weight: 600;
-    margin: 0px 10px;
-}
-.report_subheader_dropdown .mantine-Select-input {
-    font-size: 14px;
-    font-family: "Poppins";
-    font-weight: 600;
-    text-align: center;
-    width: 70px;
-}
-.report_subheader_dropdown .mantine-Select-item {
-    font-size: 14px;
-    font-family: "Poppins";
-    font-weight: 500;
-}
-.report_subheader_dropdown .mantine-Select-rightSection {
-    background-color: transparent;
-    pointer-events: none;
-    transition: transform 0.3s ease-in-out;
-}
-.report_subheader_dropdown .mantine-Select-input:focus + .mantine-Select-rightSection {
-    transform: rotate(180deg);
 }
 
 /* Report Page Content */
@@ -395,16 +355,17 @@
     flex-direction: column;
     gap: 10px;
     align-items: center;
+    padding-top: 15px;
 }
 .report_saved_card_list {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    justify-content: start;
     height: 85%;
     width: 100%;
 }
 .report_saved_card {
-    height: 100%;
     width: 100%;
     position: relative;
     padding: 10px 5px;
