--- a/assets/report_page.css
+++ b/assets/report_page.css
@@ -83,13 +83,16 @@
 
 /* Report Side Container */
 .report_side_container {
+    height: 100%;
     width: 35%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 .report_side_cards {
     border-radius: 5px;
     padding: 15px;
     background-color: white;
-    margin-bottom: 10px;
 }
 .report_side_card_header {
     color: #2D96FF;
@@ -107,6 +110,116 @@
     font-weight: 500;
     margin: 0px;
     padding: 0px;
+}
+
+/* Report Download Container */
+.report_side_download {
+    flex: 1 0 auto;
+    border-radius: 5px;
+    padding: 15px;
+    background-color: white;
+}
+.report_side_download_no_data {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.report_side_download_no_data svg {
+    margin-top: -20px;
+    margin-bottom: 10px;
+}
+.report_side_download_no_data strong {
+    color: black;
+    font-size: 20px;
+    font-family: "Poppins";
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+}
+.report_side_download_no_data p {
+    color: #90949C;
+    font-size: 15px;
+    font-family: "Poppins";
+    font-weight: 500;
+    margin: 0px;
+    padding: 0px;
+}
+.report_side_download_no_data button {
+    font-size: 14px;
+    font-family: "Poppins";
+    font-weight: 600;
+    white-space: nowrap;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: rgb(64, 192, 87);
+    padding: 5px;
+}
+.report_side_download_data{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-around;
+    align-items: center;
+}
+.report_side_download_data_header {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+.report_side_download_data_header strong {
+    color: black;
+    font-size: 20px;
+    font-family: "Poppins";
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+}
+.report_side_download_data_button_link {
+    width: 40%;
+}
+.report_side_download_data_button {
+    width: 100%;
+    color: #052F5F;
+    font-size: 18px;
+    font-family: "Poppins";
+    font-weight: 600;
+    white-space: nowrap;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: rgb(64, 192, 87);
+    padding: 5px;
+}
+.report_side_download_data_button:hover {
+    background-color: #3fb555;
+}
+.report_side_download_data_link_container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+}
+.report_side_download_data_link_container strong {
+    color: black;
+    font-size: 14px;
+    font-family: "Poppins";
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+}
+.report_side_download_data_link_container p {
+    color: #90949C;
+    font-size: 12px;
+    font-family: "Poppins";
+    font-weight: 500;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
 }
 
 /* Report Generate Container */
@@ -455,14 +568,14 @@
     align-items: stretch;
 }
 .report_saved_overview_header {
-    width: 85%;
+    width: 80%;
     padding: 10px;
     background-color: #052F5F;
     border-radius: 5px;
 }
 .report_saved_overview_button {
     color: #052F5F;
-    width: 15%;
+    width: 20%;
     font-size: 18px;
     font-family: "Poppins";
     font-weight: 600;
